--- a/alfa.html
+++ b/alfa.html
@@ -1,46 +1,101 @@
 <html>
 <html xmlns='http://www.w3.org/1999/xhtml'>
     <head>
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel='shortcut icon' type='image/ico' href='http://www.alfaromeo.com/favicon.ico'>
 <link rel='stylesheet' type='text/css' href='https://trendypublishing.com.au/css/alfa.css'>
-<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 		 <title>AlfaGT Command</title>
         </head>
         <body id='body'>
-            <h1 align="center">ALFAGT COMMAND</h1>
-                <form action='/' method='post'>
+<nav style="color:grey; opacity:0.5;"><h6 style="center">NEXT PIXRUN IN<br><span id="nextrun">NA</span> millis</h6></nav>
             <div id='form'>
                      <div id='form'>
                          <div id='formB' style='color=black,background-color=#000;'>
-						  <div id='submit'>
-						  <h2>MODE</h2>
-                           <input type='radio' name='mode' value='off'>Off</input>
-                       <input type='radio' name='mode' value='kitt'>KITT</input>
-                  <input type='radio' name='mode' value='cop'>CopMode</input>
-              <input type='radio' name='mode' value='multi'>MultiColour</input>
-<br>
-            <input type='radio' name='mode' value='yellow'>Yellow</input>
-          <input type='radio' name='mode' value='blue'>Blue</input>
-  <input type='radio' name='mode' value='green'>Green</input>       <br>               
-                            <input type='submit' value='Send'></input>
-                            </div>
+ </div><div class="w3-half" style="color:grey; opacity:0.5;">
+<h1>AlfaGT COMMAND</h1>
+</div></div><div class="w3-row w3-center"><p>Temp Celcius : <span id="temp" onload="gtemp()">0</span> C<br>Relative Humidity: <span id="humid" onload="ghumid()">NA</span> %</p>
+</div><div class="w3-row w3-center"><div class="w3-quarter w3-container w3-dark-grey w3-center">
+   </div>
                         </div>
                     </div>
                 </div>
+<h6>MODE @ <span id="watsdoin">NA</span></h6><br><br><h3 style="color:red;">MODE SELECT</h3>
+<button type="button" class="w3-button w3-mobile" onclick="wd(1)">KITT MODE</button><br><button type="button" class="w3-button w3-mobile" onclick="wd(4)">COP MODE</button><br>
+<button type="button" class="w3-button w3-mobile" onclick="wd(7)">MULTICOLOUR</button><br><button type="button" class="w3-button w3-mobile" onclick="wd(0)">LIGHTS OFF</button><br>
+</div><div class="w3-quarter w3-container"><h2>w3-third</h2></div><div class="w3-quarter w3-container"><h2>w3-third</h2></div>
             <div id='title'>
                 <div id='form'>
                     <div id='title'>
                     <div id='submit'>
-					<h2>DELAY INTERVAL</h2>
-                        <input type='radio' name='delay' value='10'>10secs</input>
-                        <input type='radio' name='delay' value='30'>30secs</input>
-                        <input type='radio' name='delay' value='60'>60secs</input><br>
-                    <input type='submit' value='Send'></input>
-					</div>
+<div class="w3-quarter w3-container w3-dark-grey w3-center"><h6>DELAY @ <span id="delay">NA</span></h6><br><br><h3 style="color:red;">DELAY SELECT</h3>
+<button type="button" class="w3-button w3-mobile" onclick="del(10)">10</button><br><button type="button" class="w3-button w3-mobile" onclick="del(30)">30</button><br><button type="button" class="w3-button w3-mobile" onclick="del(60)">60</button><br></div><div class="w3-row"><div class="w3-quarter w3-container"></div> 
+</div></div>
                     </div>
                  </div>
         </div>
-            </form>
 
+<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script>
+function wd(watsdoin) {
+var xhttp = new XMLHttpRequest();
+xhttp.onreadystatechange = function() {
+if (this.readyState == 4 && this.status == 200) {
+document.getElementById("watsdoin").innerHTML =
+this.responseText;
+}};
+xhttp.open("GET", "watsdoin?watsdoin="+watsdoin, true);
+xhttp.send();
+}
+function del(delay) {
+var xhttp = new XMLHttpRequest();
+xhttp.onreadystatechange = function() {
+if (this.readyState == 4 && this.status == 200) {
+document.getElementById("delay").innerHTML =
+this.responseText;
+}};
+xhttp.open("GET", "delay?delay="+delay, true);
+xhttp.send();
+}
+function gtemp() {
+var xhttp = new XMLHttpRequest();
+xhttp.onreadystatechange = function() {
+if (this.readyState == 4 && this.status == 200) {
+document.getElementById("temp").innerHTML =
+this.responseText;
+}};
+xhttp.open("GET", "temp", true);
+xhttp.send();
+}
+function ghumid() {
+var xhttp = new XMLHttpRequest();
+xhttp.onreadystatechange = function() {
+if (this.readyState == 4 && this.status == 200) {
+document.getElementById("humid").innerHTML =
+this.responseText;
+}};
+xhttp.open("GET", "humid", true);
+xhttp.send();
+}
+function gnext() {
+var xhttp = new XMLHttpRequest();
+xhttp.onreadystatechange = function() {
+if (this.readyState == 4 && this.status == 200) {
+document.getElementById("nextrun").innerHTML =
+this.responseText;
+}};
+xhttp.open("GET", "nextrun", true);
+xhttp.send();
+}
+
+setInterval(function() {
+ghumid();
+},5000);
+setInterval(function() {
+gnext();
+},5000);
+setInterval(function() {
+gtemp();
+}, 5000); //2000mSeconds update rate
+</script>
 			</body>
 </html>
