--- a/index.html
+++ b/index.html
@@ -1,109 +1,85 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>AlfaGT Command</title>
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css" />
-	    <link rel="stylesheet" href="https://trendypublishing.com.au/css/alfa.css" type="text/css" media="all" />
-		<link rel="icon" href="http://www.alfaromeo.com/favicon.ico" type="image/x-icon" />
-		<link rel="shortcut icon" href="http://www.alfaromeo.com/favicon.ico" type="image/x-icon" />
-</head>
-<body>
-<div class="body" style="background-image=url('http://4.bp.blogspot.com/-9YLLXboMOY8/ULYblJySkpI/AAAAAAAAEVA/7mQIS59JtxA/s1600/Alfa+Romeo+Logo+4.jpeg'); background-position=fixed;background-repeat=no-repeat">
-
-      <img id="logo-container" src="https://www.alfaromeousa.com/content/dam/alfausa/redesign/global/logo/alfa-romeo-logo-desktop-131x72-2.png" class="brand-logo align-right"></img>
-
-	      <h1 class="header center white-text">AlfaGT KITT COMMAND</h1>
-       <ul>
-			<li><button class="align-center blue-grey darken-4" type="button" onclick="sendData(1)">KITT MODE</button></li>
-			<li><button class="align-center blue-grey darken-4" type="button" onclick="sendData(4)">COP MODE</button></li>
-			<li><button class="align-center blue-grey darken-4" type="button" onclick="sendData(7)">MULTICOLOUR MODE</button></li>
-			<li><button class="align-center blue-grey darken-4" type="button" onclick="sendData(0)">LIGHTS OFF</button></li>
-			<li><button class="align-center blue-grey darken-4" type="button" onclick="sendData(2)">Yellow</button></li>
-			<li><button class="align-center blue-grey darken-4" type="button" onclick="sendData(5)">Blue</button></li>
-			<li><button class="align-center blue-grey darken-4" type="button" onclick="sendData(8)">Green</button></li>
-          </ul>		
-		</div>
-      <div class="row">
-       <p class="dark"><p class="white-text">	Temp Celcius : <span id="alfaTemp">0</span> C</p>
-		 <p class="white-text"> Relative Humidity : <span id="alfaHumid">NA</span> %</p>
-<p class="white-text">Mode : <span id="watsdoin">0</span></p>
-		<p class="white-text">DELAY @ <span id="delay">30</span></p>
-  <iframe width="480" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/511863/charts/2?bgcolor=%23000&color=%2300f&dynamic=true&results=60&title=HUMIDITY&type=column"></iframe><br>
-<iframe width="480" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/511863/charts/8?bgcolor=%23000&color=%23d62020&dynamic=true&results=60&title=Uptime&type=line"></iframe>
-	<iframe width="480" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/511863/charts/3?bgcolor=%23000&color=%23d62020&dynamic=true&results=60&title=KITTMODE&type=line"></iframe>
-<iframe width="480" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/511863/charts/1?bgcolor=%23000&color=%238000&dynamic=true&results=60&title=TEMP&type=column"></iframe>
-      </div>
-  
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>AlfaGT Command</title><link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="icon" href="http://www.alfaromeo.com/favicon.ico" type="image/x-icon" />
+<link rel="shortcut icon" href="http://www.alfaromeo.com/favicon.ico" type="image/x-icon" />
+<style>h{ font-family: Helvetica;color: red;} p{color: white;} body{ background-image:url('http://4.bp.blogspot.com/-9YLLXboMOY8/ULYblJySkpI/AAAAAAAAEVA/7mQIS59JtxA/s1600/Alfa+Romeo+Logo+4.jpeg');background-repeat: no-repeat;background-position: center; background-attachment: fixed;background-position: center top; } </style>
+</head><body style="background-color:black;">
+<div class="w3-row w3-teal"><div class="w3-quarter">
+<img id="logo-container" src="https://www.alfaromeousa.com/content/dam/alfausa/redesign/global/logo/alfa-romeo-logo-desktop-131x72-2.png" class="white brand-logo"></img>
+</div><div class="w3-half" style="text-align:center">
+<h1>AlfaGT COMMAND</h1>
+</div></div><div class="w3-row w3-center"><p>Temp Celcius : <span id="temp" onload="gtemp()">0</span> C<br>Relative Humidity: <span id="humid" onload="ghumid()">NA</span> %</p>
+</div><div class="w3-row w3-center"><div class="w3-quarter w3-container w3-dark-grey w3-center">
+<h6>MODE @ <span id="watsdoin">NA</span></h6><br><br><h3 style="color:red;">MODE SELECT</h3>
+<button type="button" class="w3-button w3-mobile" onclick="wd(1)">KITT MODE</button><br><button type="button" class="w3-button w3-mobile" onclick="wd(4)">COP MODE</button><br>
+<button type="button" class="w3-button w3-mobile" onclick="wd(7)">MULTICOLOUR</button><br><button type="button" class="w3-button w3-mobile" onclick="wd(0)">LIGHTS OFF</button><br>
+</div><div class="w3-quarter w3-container"><h2>w3-third</h2></div><div class="w3-quarter w3-container"><h2>w3-third</h2></div><div class="w3-quarter w3-container w3-dark-grey w3-center"><h6>DELAY @ <span id="delay">NA</span></h6><br><br><h3 style="color:red;">DELAY SELECT</h3>
+<button type="button" class="w3-button w3-mobile" onclick="del(10)">10</button><br><button type="button" class="w3-button w3-mobile" onclick="del(30)">30</button><br><button type="button" class="w3-button w3-mobile" onclick="del(60)">60</button><br></div><div class="w3-row"><div class="w3-quarter w3-container"></div> 
+</div><div class="w3-quarter w3-container w3-white"><h6>NEXT PIXRUN IN<br><span id="nextrun">NA</span> millis</h6><br></div></div>
 <script>
-function sendData(watsdoin) {
+function wd(watsdoin) {
 var xhttp = new XMLHttpRequest();
 xhttp.onreadystatechange = function() {
 if (this.readyState == 4 && this.status == 200) {
 document.getElementById("watsdoin").innerHTML =
 this.responseText;
-}
-};
+}};
 xhttp.open("GET", "watsdoin?watsdoin="+watsdoin, true);
 xhttp.send();
 }
-function sendDataD(delay) {
+function del(delay) {
 var xhttp = new XMLHttpRequest();
 xhttp.onreadystatechange = function() {
 if (this.readyState == 4 && this.status == 200) {
 document.getElementById("delay").innerHTML =
 this.responseText;
-}
-};
+}};
 xhttp.open("GET", "delay?delay="+delay, true);
 xhttp.send();
 }
-
-function getHumid() {
+function gtemp() {
 var xhttp = new XMLHttpRequest();
 xhttp.onreadystatechange = function() {
 if (this.readyState == 4 && this.status == 200) {
-document.getElementById("alfaHumid").innerHTML =
+document.getElementById("temp").innerHTML =
 this.responseText;
-}
-};
-xhttp.open("GET", "getHumid", true);
+}};
+xhttp.open("GET", "temp", true);
 xhttp.send();
 }
-
-function getWd() {
+function ghumid() {
 var xhttp = new XMLHttpRequest();
 xhttp.onreadystatechange = function() {
 if (this.readyState == 4 && this.status == 200) {
-document.getElementById("watsdoin").innerHTML =
+document.getElementById("humid").innerHTML =
 this.responseText;
-}
-};
-xhttp.open("GET", "getDoin", true);
+}};
+xhttp.open("GET", "humid", true);
 xhttp.send();
 }
+function gnext() {
+var xhttp = new XMLHttpRequest();
+xhttp.onreadystatechange = function() {
+if (this.readyState == 4 && this.status == 200) {
+document.getElementById("nextrun").innerHTML =
+this.responseText;
+}};
+xhttp.open("GET", "nextrun", true);
+xhttp.send();
+}
+
 setInterval(function() {
-// Call a function repetatively
-getTemp();
-getHumid();
-getWd();
+ghumid();
+},5000);
+setInterval(function() {
+gnext();
+},5000);
+setInterval(function() {
+gtemp();
 }, 5000); //2000mSeconds update rate
-
-function getTemp() {
-var xhttp = new XMLHttpRequest();
-xhttp.onreadystatechange = function() {
-if (this.readyState == 4 && this.status == 200) {
-document.getElementById("alfaTemp").innerHTML =
-this.responseText;
-}
-};
-xhttp.open("GET", "getTemp", true);
-xhttp.send();
-}
 </script>
 <br><br>
-</div>
 </body>
 </html>
